--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="head-container">
-            <h1>RESTAURANTE</h1>
+    <div class="head-container">
+        <h1>LA CASA DE LEVY</h1>
+        <div class="elementos-head">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
         </div>
+    </div>
+    <div class="container">
+      
         <div class="body-content">
             <div class="title-container">
                 <div class="information-container">
@@ -40,7 +48,9 @@
                 <article class="card">
                     <div class="card-int">
                         <span class="card__span">PLATILLOS</span>
-                        <div class="img"></div>
+                        <div class="img">
+                            <img class="img" src="https://media-cdn.tripadvisor.com/media/photo-s/13/ab/bb/9a/platillos-de-alta-cocina.jpg" alt="">
+                        </div>
                         <div class="card-data">
                           <p class="title">This is a test title
                           </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -51,7 +61,9 @@
                 <article class="card">
                     <div class="card-int">
                         <span class="card__span">BEBIDAS</span>
-                        <div class="img"></div>
+                        <div class="img">
+                           <img class="img" src="https://media.glamour.mx/photos/63fbac8762e9478a3fe578a3/4:3/w_2431,h_1823,c_limit/Decoraci%C3%B3n%20de%20bebidas.jpg" alt="">
+                        </div>
                         <div class="card-data">
                           <p class="title">This is a test title
                           </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -62,7 +74,9 @@
                 <article class="card">
                     <div class="card-int">
                         <span class="card__span">POSTRES</span>
-                        <div class="img"></div>
+                        <div class="img">
+                            <img src="https://i.pinimg.com/originals/63/5a/18/635a189d1f8c5494690783ec6c8e76ed.jpg" alt="" class="img">
+                        </div>
                         <div class="card-data">
                           <p class="title">This is a test title
                           </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
