--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="head-container">
-        <h1>LA CASA DE LEVY</h1>
+        <h1>Lla casa del sabor</h1>
         <div class="elementos-head">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
